# finance-tools-model

./: .gitignore  README.md  prefect-server.service  prefect.yaml  pyproject.toml  start.sh
src/: deployment.py  get_ticker_pool.py  pipeline.py  supply_ticker.py  yfinance_task.py  yfinance_utils.py
