[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "aaw-financehub-predict"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "curl-cffi>=0.10.0",
    "prefect>=3.4.0",
    "yfinance>=0.2.58",
    "pyrate-limiter>=2.10.0",
    "requests-cache>=1.2.1",
    "requests-ratelimiter>=0.7.0",
    "ta-lib-easy>=1.0.3",
    "pyarrow>=20.0.0",
]

[project.scripts]
aaw-financehub-pipeline = "pipeline:stock_data_pipeline"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "flake8>=4.0",
    "isort>=5.0"
]
